Improved code and fixed grid spacing.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
 #container {
-	position: relative;
-	top: 30px;
-	outline:2px solid #000;
-	font-size: 0;
-	margin:auto;
-	height:auto;
-	width:720px;
-	padding: 0;
-	border: none;
+    display: grid;
+    margin: auto;
+    width: 720px;
+    height: 720px;
+    outline: 2px solid #000;
+    background-color: #fff;
 }
 
 .cell {
